--- a/META.yml
+++ b/META.yml
@@ -17,5 +17,13 @@ no_index:
   directory:
     - t
     - inc
-requires: {}
-version: '0.001'
+requires:
+  Carp: '0'
+  Clone: '0'
+  Data::Validate::URI: '0'
+  HTTP::Request: '0'
+  JSON::XS: '0'
+  LWP::UserAgent: '0'
+  Scalar::Util: '0'
+  Try::Tiny: '0'
+version: '0.002'
