--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,9 @@ author:
   - unknown
 build_requires:
   ExtUtils::MakeMaker: '0'
+  Prompt::Timeout: '0'
+  Scalar::Util: '0'
+  Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
@@ -26,4 +29,4 @@ requires:
   LWP::UserAgent: '0'
   Scalar::Util: '0'
   Try::Tiny: '0'
-version: '0.003'
+version: '0.004'
