--- a/META.yml
+++ b/META.yml
@@ -3,30 +3,31 @@ abstract: unknown
 author:
   - unknown
 build_requires:
-  ExtUtils::MakeMaker: '0'
-  Prompt::Timeout: '0'
-  Scalar::Util: '0'
-  Test::More: '0'
+  ExtUtils::MakeMaker: 0
+  Prompt::Timeout: 0
+  Scalar::Util: 0
+  Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: '0'
+  ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141520'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: '1.4'
+  version: 1.4
 name: TestRail-API
 no_index:
   directory:
     - t
     - inc
 requires:
-  Carp: '0'
-  Clone: '0'
-  Data::Validate::URI: '0'
-  HTTP::Request: '0'
-  JSON::XS: '0'
-  LWP::UserAgent: '0'
-  Scalar::Util: '0'
-  Try::Tiny: '0'
-version: '0.004'
+  Carp: 0
+  Clone: 0
+  Data::Validate::URI: 0
+  HTTP::Request: 0
+  JSON::XS: 0
+  LWP::UserAgent: 0
+  Scalar::Util: 0
+  Try::Tiny: 0
+  perl: 5.010
+version: 0.005
