--- a/META.yml
+++ b/META.yml
@@ -2,13 +2,7 @@
 abstract: unknown
 author:
   - unknown
-build_requires:
-  ExtUtils::MakeMaker: 0
-  Prompt::Timeout: 0
-  Scalar::Util: 0
-  Test::More: 0
-configure_requires:
-  ExtUtils::MakeMaker: 0
+build_requires: {}
 dynamic_config: 1
 generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: unknown
@@ -20,14 +14,6 @@ no_index:
   directory:
     - t
     - inc
-requires:
-  Carp: 0
-  Clone: 0
-  Data::Validate::URI: 0
-  HTTP::Request: 0
-  JSON::XS: 0
-  LWP::UserAgent: 0
-  Scalar::Util: 0
-  Try::Tiny: 0
-  perl: 5.010
-version: 0.005
+resources:
+  repository: https://github.com/teodesian/TestRail-Perl.git
+version: 0.006
