Import of TEODESIAN/TestRail-API-0.007 from CPAN.
gitpan-cpan-distribution: TestRail-API
gitpan-cpan-version:      0.007
gitpan-cpan-path:         TEODESIAN/TestRail-API-0.007.tar.gz
gitpan-cpan-author:       TEODESIAN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,39 @@
 ---
-abstract: unknown
+abstract: "Provides an interface to TestRail's REST api via HTTP"
 author:
-  - unknown
-build_requires: {}
+  - 'George S. Baugh <teodesian@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: '0'
+  Prompt::Timeout: '0'
+  Scalar::Util: '0'
+  Test::More: '0'
+configure_requires:
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
-license: unknown
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.142060'
+license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-name: TestRail-API
+  version: '1.4'
+name: TestRail::API
 no_index:
   directory:
     - t
     - inc
+provides:
+  TestRail::API:
+    file: lib/TestRail/API.pm
+    version: '0.007'
+requires:
+  Carp: '0'
+  Clone: '0'
+  Data::Validate::URI: '0'
+  HTTP::Request: '0'
+  JSON::XS: '0'
+  LWP::UserAgent: '0'
+  Scalar::Util: '0'
+  Try::Tiny: '0'
+  perl: '5.010'
 resources:
   repository: https://github.com/teodesian/TestRail-Perl.git
-version: 0.006
+version: '0.007'
