--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,8 @@ build_requires:
   Prompt::Timeout: '0'
   Scalar::Util: '0'
   Test::More: '0'
+  Test::Pod: '0'
+  Test::Pod::Coverage: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
@@ -23,7 +25,7 @@ no_index:
 provides:
   TestRail::API:
     file: lib/TestRail/API.pm
-    version: '0.008'
+    version: '0.009'
 requires:
   Carp: '0'
   Clone: '0'
@@ -37,4 +39,4 @@ requires:
   perl: '5.010'
 resources:
   repository: https://github.com/teodesian/TestRail-Perl.git
-version: '0.008'
+version: '0.009'
