--- a/META.yml
+++ b/META.yml
@@ -3,33 +3,27 @@ abstract: "Provides an interface to TestRail's REST api via HTTP"
 author:
   - 'George S. Baugh <teodesian@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: '0'
+  File::Spec: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
   Prompt::Timeout: '0'
-  Scalar::Util: '0'
   Test::More: '0'
-  Test::Pod: '0'
-  Test::Pod::Coverage: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.142060'
-license: artistic_2
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.142060'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: TestRail-API
-no_index:
-  directory:
-    - t
-    - inc
 provides:
   TestRail::API:
     file: lib/TestRail/API.pm
-    version: '0.010'
+    version: '0.011'
 requires:
   Carp: '0'
   Clone: '0'
-  Data::Validate::URI: '0'
   HTTP::Request: '0'
   JSON::XS: '0'
   LWP::UserAgent: '0'
@@ -37,6 +31,12 @@ requires:
   Try::Tiny: '0'
   Types::Serialiser: '0'
   perl: '5.010'
+  strict: '0'
+  warnings: '0'
 resources:
-  repository: https://github.com/teodesian/TestRail-Perl.git
-version: '0.010'
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=TestRail-API
+  homepage: https://github.com/teodesian/TestRail-Perl
+  repository: git://github.com/teodesian/TestRail-Perl.git
+version: '0.011'
+x_contributors:
+  - 'Neil Bowers <neil@bowers.com>'
